--- a/src/assets/styles/_objects.prose.css
+++ b/src/assets/styles/_objects.prose.css
@@ -10,6 +10,7 @@
     --flow-space: var(--space-block-medium);
     --flow-inset: 1.5em;
     --list-display: list-item;
+    --anchor-decoration: underline;
     font-size: var(--font-size-body);
     font-weight: var(--font-weight-body, inherit);
 }
